src/theme/overrides.css
.react-datepicker-wrapper {
    width: 100%;
}

.react-datepicker-popper {
    z-index: 4 !important;
}

.select-override {
    z-index: 3;
}

.select-override > div:first-of-type {
    height: 56px;
}

.select-override > div {
    font-weight: bold;
    font-size: 18px !important;
    line-height: 32px !important;
    color: #04045a !important;
}

.react-select__control--menu-is-open {
    z-index: 24;
}

.bn-onboard-custom {
    z-index: 1301;
}

.bn-onboard-custom.bn-onboard-dark-mode {
    background: #0e1069 !important;
}

.bn-onboard-custom.bn-onboard-dark-mode-background.bn-onboard-custom,
.bn-onboard-custom.bn-onboard-dark-mode-background-hover:hover {
    background: #0e107b !important;
}

.higher-z-index {
    z-index: 3 !important;
}

#maturity-date {
    background: #0a2e66;
    border: 2px solid #0a2e66;
    box-sizing: border-box;
    mix-blend-mode: normal;
    border-radius: 12px;
    width: 100%;
    height: 64px;
    padding: 14px 0px 0 20px;
    outline: 0;
    font-size: 16px;
    font-weight: 600;
    font-size: 14px;
    line-height: 16px;
    letter-spacing: 0.25px;
    color: #f6f6fe;
}

#maturity-date::selection {
    color: #04045a;
    background: #f6f6fe;
}
#maturity-date:focus {
    border: 2px solid #00f9ff;
    box-sizing: border-box;
}
#maturity-date:disabled {
    opacity: 0.5;
    cursor: default;
}
#maturity-date.error {
    border: 2px solid #e53720;
}

.blob {
    background: white;
    box-shadow: 0 0 0 0 rgba(246, 246, 254, 1);
    animation: pulse-white 1s infinite;
    border-radius: 50%;
}

@keyframes pulse-white {
    0% {
        transform: scale(1);
        box-shadow: 0 0 0 0 rgba(246, 246, 254, 0.7);
    }

    25% {
        box-shadow: 0 0 0 10px rgba(246, 246, 254, 0.5);
    }

    50% {
        transform: scale(1.1);
        box-shadow: 0 0 0 10px rgba(246, 246, 254, 0.3);
    }

    75% {
        transform: scale(1.1);
        box-shadow: 0 0 0 10px rgba(246, 246, 254, 0.1);
    }
    100% {
        transform: scale(1);
        box-shadow: 0 0 0 0 rgba(246, 246, 254, 0);
    }
}

